# faimPlus

./: .gitignore  CMakeLists.txt  README.md  configuration.xml  setup.sh
include/: COO.h  CSR.h  CSVWriter.h  ConfigurationParser.h  Definitions.h  EdgeInsertion.cuh  EdgeUpdate.h  EdgeUtility.cuh  GraphParser.h  MemoryLayout.h  MemoryManager.cuh  MemoryManager.h  Queue.h  Utility.h  Vector.h  VertexMapper.h  VertexUpdate.h  faimGraph.cuh  faimGraph.h
src/: COO.cpp  CSR.cpp  CSVWriter.cpp  ConfigurationParser.cpp  EdgeUpdate.cpp  GraphParser.cpp  Instantiations.cu  MemoryManager.cpp  Utility.cpp  faimGraph.cpp  main.cpp
